--- a/IOSModelBay/zh-Hans.lproj/Localizable.strings
+++ b/IOSModelBay/zh-Hans.lproj/Localizable.strings
@@ -95,8 +95,8 @@
 
 "login_insta" = "使用Instagram账号登录";
 "Skip" = "跳过";
-"login_Privacy" = "点击登录表示你同意使用条款和隐私政策";
-"logining" = "正在登录，请稍后";
+"login_Privacy" = "点击登录表示你同意使用条款和隐私政策";//
+"logining" = "正在登录，请稍后";//
 "login_failed" = "登录失败";
 "Cancel" = "取消";
 "Retry" = "重试";
@@ -108,14 +108,14 @@
 "My" = "我的";
 "Login" = "登录";
 "select_role" = "选择角色";
-"Professional" = "专业人士";
-"Audience" = "观众";
-"become_pro" = "随时都可以申请成为专业人士";
-"General_Info" = "基本信息";
+"Professional" = "专业人士";//
+"Audience" = "观众";//
+"become_pro" = "随时都可以申请成为专业人士";//
+"General_Info" = "基本信息";//
 "Username" = "用户名";
 "Gender" = "性别";
 "Career" = "职业";
-"Done" = "完成";
+"Done" = "完成";//
 
 
 //职业
@@ -134,22 +134,21 @@
 "Agency" = "经纪人";
 
 "Username_unavailable" = "用户名不可用";
-"Loading_failed" = "加载失败";
+"Loading_failed" = "加载失败";//
 "Filter" = "筛选";
 "Search name" = "搜索用户名";
 "All" = "全部";
 "Men" = "男性";
 "Women" = "女性";
-"Career" = "职业";
-"Submit" = "提交";
-"Invite" = "邀请xxxx";
-"No_Results" = "没有搜索到任何结果";
+//"Career" = "职业";
+"Submit" = "提交";//
+"Invite_xxxx" = "邀请xxxx";
+"No_Results" = "没有搜索到任何结果";//
 "Enter_email" = "输入xxxx的邮箱";
 "Invite" = "邀请";
 "Invite_Sent" = "邀请已发出";
 
-
-"share_message" = "Hi, @username 加入ModelBay，发现全球优秀的模特、摄影师、化妆师，拓展你的专业人脉。在AppStore或Googleplay搜索ModelBay.进行下载。";
+"share_message" = "Hi, @username 加入ModelBay，发现全球优秀的模特、摄影师、化妆师，拓展你的专业人脉。在AppStore或Googleplay搜索ModelBay.进行下载。";//
 "Favor" = "收藏";
 "Country" = "国家";
 "Age" = "年龄";
@@ -174,27 +173,26 @@
 "mentioned_you" = "xxxx 在作品中提到了你";
 "liked_your_photo" = "xxxx 赞了你的照片";
 "comment_your_photo" = "xxxx 评论了你的照片";
-"leave_you_message" = "xxxx 给你留言";
-"reply_your_message" = "xxxx 回复了你的留言";
+"leave_you_message" = "xxxx 给你留言";//
+"reply_your_message" = "xxxx 回复了你的留言";//
 "xxxx and x more favored you" = "xxx和另外x人将你加入到收藏";
 "xxxx and x more mentioned you" = "xxx和另外x人在照片中提到了你";
 "xxxx and x more liked your photo" = "xxx和另外x人赞了你的照片";
 "xxxx and x more comment your photo" = "xxx和另外x人评论了你的照片";
 "xxxx and x more leave you a message" = "xxx和另外x人给你留言";
 "xxxx and x more reply your message" = "xxx和另外x人回复了你的留言";
-"Share" = "分享";
-"Invite_Friends" = "邀请好友";
+"Share" = "分享";//
+"Invite_Friends" = "邀请好友";//
 "Setting" = "设置";
 
 "Contracts" = "联系方式";
-"Only Professional" = "对专业用户公开";
-"Only Me" = "不公开";
-"General" = "选择出生日期";
-"Date of birth" = "基础信息";
+"Only Professional" = "对专业用户公开";//
+"Only Me" = "不公开";//
+"General" = "选择出生日期";//
+"Date of birth" = "基础信息";//
 "Liker" = "称赞者";
 "Comments" = "评论";
 //"Reply" = "回复";
-
 
 "Showcase" = "影集";
 "Poster" = "海报";
@@ -202,12 +200,10 @@
 "Use" = "使用此模板";
 "Edit" = "编辑模板";
 "Add description" = "添加说明";
-"Select User" = "选择用户";
+"Select User" = "选择用户";//
 "ALL_photo" = "所有照片";
 "Title" = "标题";
 "Description" = "说明";
-
-
 
 "Uploading" = "正在上传";
 "Upload Failure" = "上传失败";
@@ -221,13 +217,13 @@
 "Follow us on Facebook" = "在Facebook上关注我们";
 "Logout" = "注销";
 
-
 "New Favored" = "被收藏";
 "New Likes" = "新的赞";
 "New Mention" = "被提到";
 "New Comment" = "新评论";
 "New Message" = "留言";
 
+"Send" = "Send";
 
 
 
