--- a/IOSModelBay/Base.lproj/Localizable.strings
+++ b/IOSModelBay/Base.lproj/Localizable.strings
@@ -233,10 +233,8 @@
 "New Message" = "New Message";
 
 "Send" = "Send";
-
-
 "Leave Message" = "Leave Message";
-
 "Edit_detail" = "Edit";
+"introduce" = "Introduce";
 
 
