--- a/IOSModelBay/zh-Hans.lproj/Localizable.strings
+++ b/IOSModelBay/zh-Hans.lproj/Localizable.strings
@@ -185,7 +185,7 @@
 "Invite_Friends" = "邀请好友";//
 "Setting" = "设置";
 
-"Contracts" = "联系方式";
+"Contracts" = "电话";
 "Only Professional" = "对专业用户公开";//
 "Only Me" = "不公开";//
 "General" = "选择出生日期";//
