--- a/IOSModelBay/Base.lproj/Localizable.strings
+++ b/IOSModelBay/Base.lproj/Localizable.strings
@@ -236,5 +236,7 @@
 "Leave Message" = "Leave Message";
 "Edit_detail" = "Edit";
 "introduce" = "Introduce";
+"NoMore" = "No more";
 
-
+"max_select" = "Maximum select 3";
+"min_select" = "Select 1 at least";
