--- a/IOSModelBay/en.lproj/Localizable.strings
+++ b/IOSModelBay/en.lproj/Localizable.strings
@@ -236,3 +236,13 @@
 
 "max_select" = "Maximum select 3";
 "min_select" = "Select 1 at least";
+"Add_Reply" = "Comment";
+
+"Delete_Ablum" = "Delete";
+"Delete_Y" = "Yes";
+"Delete_N" = "No";
+"Next" = "Next";
+
+"Welcome" = "Welcome";
+
+
