--- a/IOSModelBay/Base.lproj/Localizable.strings
+++ b/IOSModelBay/Base.lproj/Localizable.strings
@@ -249,3 +249,8 @@
 "Next" = "Next";
 "Welcome" = "Welcome";
 
+"Rate_Message" = "Please give us 5 star rating if you enjoy using ModelBay, or tell us what to improve.";
+"Rate_Rate" = "Rate 5 Star";
+"Rate_FeedBack" = "Feedback";
+"Rate_Cancel" = "Later";
+
