--- a/IOSModelBay/zh-Hans.lproj/Localizable.strings
+++ b/IOSModelBay/zh-Hans.lproj/Localizable.strings
@@ -240,3 +240,7 @@
 "Next" = "下一步";
 "Welcome" = "欢迎";
 
+"Rate_Message" = "如果你喜欢Modelbay，请给我们5星评价，或者告诉我们有哪些需要提高的地方。";
+"Rate_Rate" = "评5星";
+"Rate_FeedBack" = "反馈";
+"Rate_Cancel" = "下次再说";
