--- a/IOSModelBay/en.lproj/Localizable.strings
+++ b/IOSModelBay/en.lproj/Localizable.strings
@@ -245,4 +245,9 @@
 
 "Welcome" = "Welcome";
 
+"Rate_Message" = "Please give us 5 star rating if you enjoy using ModelBay, or tell us what to improve.";
+"Rate_Rate" = "Rate 5 Star";
+"Rate_FeedBack" = "Feedback";
+"Rate_Cancel" = "Later";
+
 
