--- a/IOSModelBay/Base.lproj/Localizable.strings
+++ b/IOSModelBay/Base.lproj/Localizable.strings
@@ -215,7 +215,7 @@
 
 "Uploading" = "Uploading";
 "Upload Failure" = "Upload Failure";
-"Uplaod Success" = "Uplaod Success";
+"Uplaod Success" = "Upload Success";
 "Setting" = "Setting";
 "Notification" = "Notification";
 "Help Center" = "Help Center";
