--- a/IOSModelBay/zh-Hans.lproj/Localizable.strings
+++ b/IOSModelBay/zh-Hans.lproj/Localizable.strings
@@ -223,8 +223,8 @@
 "New Comment" = "新评论";
 "New Message" = "留言";
 
-"Send" = "Send";
-"Leave Message" = "Leave Message";
+"Send" = "发送";
+"Leave Message" = "留言";
 "Add_Reply" = "评论";
 "Edit_detail" = "编辑";
 "introduce" = "介绍";
