--- a/IOSModelBay/zh-Hans.lproj/Localizable.strings
+++ b/IOSModelBay/zh-Hans.lproj/Localizable.strings
@@ -186,7 +186,7 @@
 "Setting" = "设置";
 
 "Contracts" = "电话";
-"Only Professional" = "对专业用户公开";//
+"Only Professional" = "公开";//
 "Only Me" = "不公开";//
 "General" = "选择出生日期";//
 "Date of birth" = "基础信息";//
