--- a/IOSModelBay/Base.lproj/Localizable.strings
+++ b/IOSModelBay/Base.lproj/Localizable.strings
@@ -192,7 +192,7 @@
 
 
 "Contracts" = "Contracts";
-"Only Professional" = "Only Professional";
+"Only Professional" = "Public";
 "Only Me" = "Only Me";
 "General" = "General";
 "Date of birth" = "Date of birth";
@@ -224,7 +224,6 @@
 "Follow us on Instagram" = "Follow us on Instagram";
 "Follow us on Facebook" = "Follow us on Facebook";
 "Logout" = "Logout";
-
 
 "New Favored" = "New Favored";
 "New Likes" = "New Likes";
